# fiber-link-optics-visualizer-public

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  SECURITY.md  fiber_link_optics_visualizer.py  fiber_link_optics_visualizer.spec  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: dummy-report.html
fiber_optics/: __init__.py  analysis.py  cdp.py  cli.py  gui.py  interfaces.py  models.py  parser.py  report.py  ssh_collector.py  workflow.py
tests/: __init__.py  test_analysis.py  test_cdp.py  test_parser.py  test_report.py  test_ssh_collector.py  test_workflow.py
