[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fiber-link-optics-visualizer"
version = "0.3.5"
description = "Visualize bidirectional Cisco transceiver readings from saved CLI output or optional read-only SSH collection."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Fiber Link Optics Visualizer contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
gui = ["ttkbootstrap>=1.10"]
ssh = ["netmiko>=4.4"]
build = ["pyinstaller>=6.0", "ttkbootstrap>=1.10", "netmiko>=4.4"]

[project.scripts]
fiber-optics = "fiber_optics.cli:main"
fiber-optics-gui = "fiber_optics.gui:main"

[tool.setuptools]
packages = ["fiber_optics"]
